1999-04-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-config.c (access_config_extended): Memory leak fix.
	Thanks to Morten Wellinder for pointing this out again.

	* gnome-help.c (gnome_help_file_find_file): Do not overwrite freed
	memory. 

Thu Apr  8 21:50:12 1999  ape@lrdpf.spacetec.no  (Asbjorn Pettersen)

	* gnome-score.c (gnome_score_get_notable): Open files in text mode.

1999-04-05 Owen Taylor  <otaylor@redhat.com>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): Always
	use /bin/sh to launch desktop entries, not the user shell.

1999-03-11 Owen Taylor  <otaylor@redhat.com>

	* gnome-dentry.[ch]: Add support for reading in .kdelnk
	files and doing the proper subsitutions when launching
	.kdelnk files.

1999-04-05  Owen Taylor  <otaylor@redhat.com>

	* dns-helper.c (main): NULL terminate the input
	string properly.

Fri Apr  2 20:55:28 1999  ape@spacetec.no  (Asbjorn Pettersen)

	* gnome-history.c (write_history): 
	* gnome-mime.c (mime_fill_from_file): Open file in TEXT mode.
	This is for the OS/2 version.

1999-03-31  James Henstridge  <james@daa.com.au>

	* gnome-config.c (access_config_extended): new function that checks
	the config entries in more places than just ~/.gnome.  To be exact,
	it first checks under $(sysconfdir)/gnome/config-override, then
	~/.gnome, then $(sysconfdir)/gnome/config and as a final fallback,
	the application specified default.
	(_gnome_config_get_*_with_default): use access_config_extended to
	read values provided that it isn't a private config entry, and it
	wasn't an absolute filename (eg. =/something=/seciton/key).

1999-03-30  Owen Taylor  <otaylor@redhat.com>

	* gnome-config.c (is_loaded): Fix logic when a
	config file is changed under us so it at least
	doesn't segfault. Without locking I wouldn't
	bet anything about correctness.

1999-03-26  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* gnome-dentry.c (gnome_desktop_entry_launch_with_args): free