@@ -1,3 +1,10 @@
+Fri Apr 09 18:47:46 1999  George Lebl  <jirka@5z.com>
+
+	* gnome-config.c: documentation fixes and minor cleanups
+
+	* gnome-dentry.c: fix a problem with _save, as we have to push
+	  an empty section in case our caller pushed a different section
+
 1999-04-08  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnome-config.c (access_config_extended): Memory leak fix.
